--- a/style.css
+++ b/style.css
@@ -53,6 +53,23 @@ footer {
     margin: 2em;
 }
 
+.about-section {
+    text-align: left;
+}
+
+.about-text, .about-image {
+    width: 100%;
+    margin-bottom: 2em;
+}
+
+.about-image img {
+    max-width: 300px;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    border-radius: 5px;
+}
+
 /* Style for the password input box */
 #resumePassword {
     font-family: Helvetica, sans-serif;
